# malhunt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  malhunt.py  pyproject.toml  test_rules.py
docs/: ARCHITECTURE.md  INSTALLATION.md  TROUBLESHOOTING.md  USAGE.md
src/malhunt/: __init__.py  __main__.py  artifacts.py  core.py  models.py  scanner.py  utils.py  volatility.py
tests/: __init__.py  conftest.py  test_core.py  test_scanner.py  test_volatility.py
