[project]
name = "malhunt"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrea Fortuna"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
